@@ -1228,7 +1228,8 @@ int command_listen(object *op, char *params) {
 int command_statistics(object *pl, char *params) {
     char buf[MAX_BUF];
     char buf2[MAX_BUF];
-    int hours, minutes;
+    uint32 hours, minutes;
+    uint64 seconds; /* 64 bit to prevent overflows an intermediate results */
 
     if (!pl->contr)
         return 1;
@@ -1286,13 +1287,16 @@ int command_statistics(object *pl, char *params) {
                          i18n_translate(get_language(pl), I18N_MSG_CMISC_129),
                          pl->contr->peaceful ?  "Peaceful" : "Hostile");
 
-    /* max_time is in microseconds - thus divide by 1000000.  60 seconds/minute.
+    /* max_time is in microseconds - thus divide by 1000000.
+     * Need 64 bit values, as otherwise ticks_played * max_time
+     * can easily overflow.
      * Note the message displayed here isn't really
      * perfect, since if max_time has been changed since the player started,
      * the time estimates use the current value.  But I'm presuming that
      * max_time won't change very often.  MSW 2009-12-01
      */
-    minutes = pl->contr->ticks_played * max_time / (60 * 1000000);
+    seconds = (uint64)pl->contr->ticks_played * (uint64)max_time / 1000000;
+    minutes = (uint32)seconds / 60;
     hours = minutes / 60;
     minutes = minutes % 60;
 
