@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/c_misc.c:  Fix overflow in showing how much time character has been
+   played - use 64 bit interim values.
+MSW 2009-12-12
+
 Prevent DMs from using 'quit', else they aren't actually deleted.
 Nicolas Weeger 2009-12-12
 
